--- a/src/MEGASync/gui/ui/DownloadFromMegaDialog.ui
+++ b/src/MEGASync/gui/ui/DownloadFromMegaDialog.ui
@@ -6,72 +6,78 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>430</width>
-    <height>160</height>
+    <width>480</width>
+    <height>210</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
   </property>
   <property name="minimumSize">
    <size>
-    <width>430</width>
-    <height>160</height>
+    <width>480</width>
+    <height>210</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>430</width>
-    <height>160</height>
+    <width>480</width>
+    <height>210</height>
    </size>
   </property>
   <property name="windowTitle">
    <string>Download from MEGA</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">QWidget
+   <string notr="true">#bOK
 {
-font-size: 11px;
+color: #04101E; /*colorToken.text-inverse-accent*/
+background-color:  #F4F4F5; /*colorToken.button-primary*/
+width: 40px;
 }
 
-QCheckBox::indicator {
-     width: 16px;
-     height: 16px;
- }
-
-QRadioButton::indicator {
-     width: 16px;
-     height: 16px;
- }
-
-QScrollBar:horizontal {
-height: 16px;
+#eFolderPath
+{
+border-radius: 8px;
+border-color: #D8D9DB; /*colorToken.border-strong*/
+border-style: solid;
+border-width: 1px;
+background-color: #FFFFFF; /*colorToken.page-background*/
+height: 30px;
+padding-left: 10px;
 }
 
-QPushButton
+QLabel
 {
-    min-height: 14px;
-	height: 14px;
+color: #303233; /*colorToken.text-primary*/
+font-size: 12px;
+font-weight: 400;
 }
 
-#cDefaultPath
+#label_2
 {
-    spacing: 10px;
+color: #303233; /*colorToken.text-primary*/
+font-size: 12px;
+font-weight: 600;
 }
 
 #bChange
 {
+background-color:  #F3F4F4; /*colorToken.button-secondary*/
+color: #616366; /*colorToken.text-secondary*/
+border-color:  #F3F4F4; /*colorToken.button-secondary*/
+border-width: 0px;
+border-style: solid;
+border-radius: 5px;
+padding: 3px 10px 3px 10px;
 }
 </string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
-   <property name="leftMargin">
-    <number>12</number>
-   </property>
-   <property name="topMargin">
-    <number>5</number>
-   </property>
-   <property name="rightMargin">
-    <number>12</number>
-   </property>
-   <property name="bottomMargin">
+   <property name="spacing">
     <number>10</number>
    </property>
    <item>
@@ -88,85 +94,81 @@ QPushButton
        <height>24</height>
       </size>
      </property>
-     <property name="focusPolicy">
-      <enum>Qt::StrongFocus</enum>
-     </property>
      <property name="text">
       <string>Please select the download folder for your files:</string>
      </property>
      <property name="alignment">
-      <set>Qt::AlignBottom|Qt::AlignHCenter</set>
+      <set>Qt::AlignmentFlag::AlignBottom|Qt::AlignmentFlag::AlignLeading|Qt::AlignmentFlag::AlignLeft</set>
      </property>
     </widget>
    </item>
    <item>
-    <widget class="QWidget" name="widget" native="true">
-     <layout class="QHBoxLayout" name="horizontalLayout">
-      <property name="spacing">
-       <number>6</number>
-      </property>
-      <property name="leftMargin">
-       <number>9</number>
-      </property>
-      <property name="topMargin">
-       <number>0</number>
-      </property>
-      <property name="rightMargin">
-       <number>0</number>
-      </property>
-      <property name="bottomMargin">
-       <number>9</number>
-      </property>
-      <item>
-       <widget class="QLabel" name="label_2">
-        <property name="focusPolicy">
-         <enum>Qt::StrongFocus</enum>
-        </property>
-        <property name="text">
-         <string>Local folder:</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QLineEdit" name="eFolderPath">
-        <property name="enabled">
-         <bool>true</bool>
-        </property>
-        <property name="minimumSize">
-         <size>
-          <width>0</width>
-          <height>0</height>
-         </size>
-        </property>
-        <property name="alignment">
-         <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
-        </property>
-        <property name="readOnly">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QPushButton" name="bChange">
-        <property name="minimumSize">
-         <size>
-          <width>0</width>
-          <height>16</height>
-         </size>
-        </property>
-        <property name="maximumSize">
-         <size>
-          <width>16777215</width>
-          <height>16777215</height>
-         </size>
-        </property>
-        <property name="text">
-         <string>Choose</string>
-        </property>
-       </widget>
-      </item>
-     </layout>
-    </widget>
+    <layout class="QVBoxLayout" name="verticalLayout_2">
+     <property name="spacing">
+      <number>5</number>
+     </property>
+     <property name="bottomMargin">
+      <number>7</number>
+     </property>
+     <item>
+      <widget class="QLabel" name="label_2">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="text">
+        <string>Local folder:</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <layout class="QHBoxLayout" name="horizontalLayout">
+       <property name="spacing">
+        <number>6</number>
+       </property>
+       <item>
+        <widget class="QLineEdit" name="eFolderPath">
+         <property name="enabled">
+          <bool>true</bool>
+         </property>
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="readOnly">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="bChange">
+         <property name="minimumSize">
+          <size>
+           <width>80</width>
+           <height>0</height>
+          </size>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>80</width>
+           <height>16777215</height>
+          </size>
+         </property>
+         <property name="text">
+          <string>Choose</string>
+         </property>
+         <property name="flat">
+          <bool>false</bool>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
+    </layout>
    </item>
    <item>
     <widget class="QCheckBox" name="cDefaultPath">
@@ -174,7 +176,7 @@ QPushButton
       <bool>true</bool>
      </property>
      <property name="styleSheet">
-      <string notr="true">margin-left: 9px;</string>
+      <string notr="true"/>
      </property>
      <property name="text">
       <string>Always download to this destination</string>
@@ -211,7 +213,7 @@ QPushButton
       <item>
        <spacer name="horizontalSpacer">
         <property name="orientation">
-         <enum>Qt::Horizontal</enum>
+         <enum>Qt::Orientation::Horizontal</enum>
         </property>
         <property name="sizeHint" stdset="0">
          <size>
@@ -240,15 +242,6 @@ QPushButton
    </item>
   </layout>
  </widget>
- <tabstops>
-  <tabstop>infoLabel</tabstop>
-  <tabstop>label_2</tabstop>
-  <tabstop>eFolderPath</tabstop>
-  <tabstop>bChange</tabstop>
-  <tabstop>cDefaultPath</tabstop>
-  <tabstop>bCancel</tabstop>
-  <tabstop>bOK</tabstop>
- </tabstops>
  <resources/>
  <connections>
   <connection>
