SNC-4808 : updated style

--- a/src/MEGASync/gui/style/WidgetsComponentsStyleSheets.css
+++ b/src/MEGASync/gui/style/WidgetsComponentsStyleSheets.css
@@ -123,6 +123,7 @@ image: url(:/images/themed/light/radio_checked.svg); /*replaceThemeToken*/
 QRadioButton
 {
 color: #303233; /*colorToken.text-primary*/
+background-color: transparent;
 }
 
 QGroupBox
