SNC-4808 : Added new style and tokenize

--- a/src/MEGASync/gui/Resources.qrc
+++ b/src/MEGASync/gui/Resources.qrc
@@ -9,5 +9,9 @@
         <file>images/account_details/cloud.svg</file>
         <file>images/minus-circle.svg</file>
         <file>images/x.svg</file>
+        <file>images/themed/light/spinbox_up_arrow.svg</file>
+        <file>images/themed/light/spinbox_down_arrow.svg</file>
+        <file>images/themed/dark/spinbox_up_arrow.svg</file>
+        <file>images/themed/dark/spinbox_down_arrow.svg</file>
     </qresource>
 </RCC>
