--- a/src/MEGASync/gui/linux/BandwidthSettings.ui
+++ b/src/MEGASync/gui/linux/BandwidthSettings.ui
@@ -50,16 +50,7 @@ border-width: 1px;
 background-color: #FFFFFF; /*colorToken.page-background*/
 padding-right: 5px;
 }
-
-#eMaxDownloadConnections, #eMaxUploadConnections
-{
-border-radius: 4px;
-border-color: #04101E; /*colorToken.border-strong-selected*/
-border-style: solid;
-border-width: 1px;
-background-color: #FFFFFF; /*colorToken.page-background*/
-padding-left: 5px;
-}</string>
+</string>
   </property>
   <layout class="QVBoxLayout" name="BandwidthSettingsLayout">
    <property name="spacing">
@@ -82,6 +73,12 @@ padding-left: 5px;
      <property name="minimumSize">
       <size>
        <width>0</width>
+       <height>162</height>
+      </size>
+     </property>
+     <property name="maximumSize">
+      <size>
+       <width>16777215</width>
        <height>162</height>
       </size>
      </property>
@@ -263,6 +260,12 @@ padding-left: 5px;
        <height>100</height>
       </size>
      </property>
+     <property name="maximumSize">
+      <size>
+       <width>16777215</width>
+       <height>100</height>
+      </size>
+     </property>
      <property name="title">
       <string>Download rate limit</string>
      </property>
@@ -377,6 +380,12 @@ padding-left: 5px;
        <height>70</height>
       </size>
      </property>
+     <property name="maximumSize">
+      <size>
+       <width>16777215</width>
+       <height>70</height>
+      </size>
+     </property>
      <property name="title">
       <string>Number of connections per transfer</string>
      </property>
@@ -418,6 +427,9 @@ padding-left: 5px;
           </property>
           <property name="alignment">
            <set>Qt::AlignmentFlag::AlignLeading|Qt::AlignmentFlag::AlignLeft|Qt::AlignmentFlag::AlignVCenter</set>
+          </property>
+          <property name="buttonSymbols">
+           <enum>QAbstractSpinBox::ButtonSymbols::PlusMinus</enum>
           </property>
           <property name="minimum">
            <number>1</number>
@@ -477,8 +489,23 @@ padding-left: 5px;
             <height>25</height>
            </size>
           </property>
+          <property name="frame">
+           <bool>true</bool>
+          </property>
           <property name="alignment">
            <set>Qt::AlignmentFlag::AlignLeading|Qt::AlignmentFlag::AlignLeft|Qt::AlignmentFlag::AlignVCenter</set>
+          </property>
+          <property name="buttonSymbols">
+           <enum>QAbstractSpinBox::ButtonSymbols::UpDownArrows</enum>
+          </property>
+          <property name="correctionMode">
+           <enum>QAbstractSpinBox::CorrectionMode::CorrectToPreviousValue</enum>
+          </property>
+          <property name="keyboardTracking">
+           <bool>true</bool>
+          </property>
+          <property name="showGroupSeparator" stdset="0">
+           <bool>false</bool>
           </property>
           <property name="minimum">
            <number>1</number>
