SAT-1270. Device component

--- a/src/MEGASync/gui/Resources_qml.qrc
+++ b/src/MEGASync/gui/Resources_qml.qrc
@@ -101,5 +101,6 @@
         <file>images/qml/device_center/backup_folder.svg</file>
         <file>images/qml/device_center/sync_folder.svg</file>
         <file>images/qml/three_dots.svg</file>
+        <file>images/qml/device_center/devices.svg</file>
     </qresource>
 </RCC>
