--- a/src/MEGASync/transfers/gui/macx/TransfersAccountInfoWidget.ui
+++ b/src/MEGASync/transfers/gui/macx/TransfersAccountInfoWidget.ui
@@ -148,13 +148,13 @@
        <property name="minimumSize">
         <size>
          <width>0</width>
-         <height>26</height>
+         <height>0</height>
         </size>
        </property>
        <property name="maximumSize">
         <size>
          <width>16777215</width>
-         <height>26</height>
+         <height>16777215</height>
         </size>
        </property>
        <layout class="QHBoxLayout" name="hlTop">
@@ -174,26 +174,7 @@
          <number>0</number>
         </property>
         <item>
-         <widget class="AccountTypeWidget" name="wAccountType" native="true">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
-          <property name="minimumSize">
-           <size>
-            <width>0</width>
-            <height>0</height>
-           </size>
-          </property>
-          <property name="maximumSize">
-           <size>
-            <width>16777215</width>
-            <height>16777215</height>
-           </size>
-          </property>
-         </widget>
+         <widget class="AccountTypeWidget" name="wAccountType" native="true"/>
         </item>
         <item>
          <spacer name="horizontalSpacer">
@@ -203,7 +184,7 @@
           <property name="sizeHint" stdset="0">
            <size>
             <width>40</width>
-            <height>26</height>
+            <height>20</height>
            </size>
           </property>
          </spacer>
@@ -211,7 +192,7 @@
         <item>
          <widget class="QPushButton" name="bUpgrade">
           <property name="sizePolicy">
-           <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+           <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
