--- a/src/MEGASync/gui/linux/AccountTypeWidget.ui
+++ b/src/MEGASync/gui/linux/AccountTypeWidget.ui
@@ -93,7 +93,7 @@
       </size>
      </property>
      <property name="text">
-      <string>FREE</string>
+      <string/>
      </property>
     </widget>
    </item>
