--- a/src/MEGASync/transfers/gui/win/TransfersAccountInfoWidget.ui
+++ b/src/MEGASync/transfers/gui/win/TransfersAccountInfoWidget.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string/>
   </property>
   <property name="styleSheet">
    <string notr="true">#TransferManagerAccountInfo
@@ -230,7 +230,7 @@
            <string notr="true"/>
           </property>
           <property name="text">
-           <string>Upgrade</string>
+           <string/>
           </property>
          </widget>
         </item>
